# game

./: CMakeLists.txt  README  TODO
content/: character.aseprite
include/: apis.hpp  common.hpp  engine.hpp
include/engine/: model.hpp  object.hpp  renderer.hpp  ui-imgui.hpp
shaders/: fs_basic.sc  fs_selected.sc  vs_basic.sc
src/: engine.cpp  game.cpp
src/engine/: imgui.cpp  model.cpp  renderer.cpp  ui-imgui.cpp
